# syntheca

./: .gitignore  README.md  current_marimo_monolith.py  openalex_data_models.py  pyproject.toml
.github/: copilot-instructions.md  progress.md  refactor-plan.md  todo.md
.github/workflows/: ci.yaml
output/: merged.explicit.parquet
scripts/: run_full_pipeline.py
src/syntheca/: __init__.py  pipeline.py
src/syntheca/clients/: __init__.py  base.py  openalex.py  pure_oai.py  pure_oai_lxml.py  ut_people.py
src/syntheca/config/: __init__.py  settings.py
src/syntheca/models/: __init__.py  openalex.py
src/syntheca/processing/: __init__.py  cleaning.py  enrichment.py  matching.py  merging.py  organizations.py
src/syntheca/reporting/: __init__.py  export.py
src/syntheca/utils/: caching.py  logging.py  persistence.py  progress.py  validation.py
tests/: test_cache_retrieval_clients.py  test_clients_base.py  test_clients_openalex.py  test_clients_pure_oai.py  test_clients_ut_people.py  test_concurrent_progress_bars.py  test_config_settings.py  test_models_openalex.py  test_monolith_alignment.py  test_pipeline.py  test_pipeline_clients.py  test_pipeline_integration.py  test_processing_advanced.py  test_processing_cleaning.py  test_processing_enrichment.py  test_processing_enrichment_advanced.py  test_processing_matching.py  test_processing_merging.py  test_processing_merging_advanced.py  test_processing_organizations.py  test_reporting_export.py  test_utils_caching.py  test_utils_persistence.py  test_utils_validation.py
(+3 files in other folders)
