[project]
name = "syntheca"
version = "0.1.0"
description = "ETL pipeline for institutional academic metadata"
readme = "README.md"
authors = [
    { name = "Samuel Mok", email = "s.mok@utwente.nl" }
]
requires-python = ">=3.14"
dependencies = [
    "dacite>=1.9.2",
    "httpx>=0.28.1",
    "levenshtein>=0.27.3",
    "loguru>=0.7.3",
    "marimo>=0.17.8",
    "openpyxl>=3.1.5",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "selectolax>=0.4.3",
    "tenacity>=9.1.2",
    "xlsxwriter>=3.2.9",
    "xmltodict>=1.0.2",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a27",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["syntheca"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
